--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --mode development",
-    "prod": "webpack --mode production"
+    "dev": "webpack serve --mode development",
+    "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
@@ -14,10 +14,15 @@
   "devDependencies": {
     "css-loader": "^6.8.1",
     "eslint": "^8.54.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
     "prettier": "^3.1.0",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "url-loader": "^4.1.1"
   }
 }
